package main

import (
	"fmt"
	"log"
	"net"

	context "context"
	 
	  
	  "math"
	"errorhandlingGrpc/pb"
	grpc "google.golang.org/grpc"
	codes "google.golang.org/grpc/codes"
	status "google.golang.org/grpc/status"
)

type server struct{
	pb.UnimplementedCalculatorServiceServer
}

func (*server) SquareRoot(ctx context.Context,req  *pb.SquareRootRequest) (*pb.SquareRootResponse, error) {
	fmt.Println("Received SquareRoot RPC")
	number := req.GetNumber()
	if number < 0 {
		return nil, status.Errorf(
			codes.InvalidArgument,
			fmt.Sprintf("Received a negative number: %v", number),
		)
	}
	return &pb.SquareRootResponse{
		NumberRoot: math.Sqrt(float64(number)),
	}, nil
}
func main() {
	fmt.Println("hello world")

	lis,err:=net.Listen("tcp",":8888")
	if err != nil {
		log.Fatalf("failed to listen %v",err)
	}

	s:=grpc.NewServer()
	pb.RegisterCalculatorServiceServer(s,&server{})
	if err:=s.Serve(lis); err != nil {
		log.Fatalf("faled to serve %v",err)
	}
}
